<resources>
    <string name="app_name">E-Inventory</string>
    <string name="nav_check">Price Checker</string>
    <string name="nav_inventory">Inventory</string>
    <string name="nav_receive">Goods Receive</string>
    <string name="nav_admin">Admin</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_password">Change Password</string>
    <string name="nav_modules">Modules</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_return">Return</string>
    <string name="login">Login</string>
    <string name="nav_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_setup">Setup</string>
    <string name="nav_sale">Sales</string>
    <string name="action_download">Pdf</string>
    <string name="action_sync">Sync All</string>
    <string name="nav_receipt">Receipts</string>
    <string name="action_print">print</string>
    <string name="action_share">share</string>
    <string name="action_clear">Clear All</string>
    <string name="action_cart">Cart</string>
    <string name="action_delete">Delete</string>

    <string name="default_server_url">tsalim.ddns.net:1981</string>
    <string name="title_server">Base Url</string>

    <string name="key_server_url">key_server_url</string>
    <string name="key_module_sales">key_module_sales</string>
    <string name="key_module_inventory">key_module_inventory</string>
    <string name="key_module_goods">key_module_goods</string>
    <string name="key_module_receipts">key_module_receipts</string>
    <string name="key_module_order">key_module_order</string>
    <string name="key_module_statement">key_module_statement</string>
    <string name="title_module_sales">Sales</string>
    <string name="title_module_receipts">Receipts</string>
    <string name="title_module_order">Order</string>
    <string name="title_module_statement">Statement</string>
    <string name="title_module_goods">Goods</string>
    <string name="title_module_inventory">Inventory</string>
    <string name="title_printer_settings">Printer Settings</string>
    <string name="summery_printer_settings">Printer Configuration</string>

    <string name="key_realtime_sync">key_realtime_sync</string>
    <string name="title_realtime_sync">Real Time Sync</string>
    <string name="default_header_1">encorn.com</string>
    <string name="title_header_1">Print header</string>
    <string name="summery_header_1">set print header message</string>
    <string name="key_header_1">key_header_1</string>

    <string name="default_header_2">+974 012345</string>
    <string name="title_header_2">Print header line2</string>
    <string name="summery_header_2">set print header line2</string>
    <string name="key_header_2">key_header_2</string>

    <string name="default_header_3">email@encorn.com</string>
    <string name="title_header_3">Print header line3</string>
    <string name="summery_header_3">set print header line3</string>
    <string name="key_header_3">key_header_3</string>

    <string name="default_footer">Thank you</string>
    <string name="title_footer">Print footer</string>
    <string name="summery_footer">set print footer</string>
    <string name="key_footer">key_footer</string>
    <string name="key_printer">key_printer</string>
    <string name="server_settings">Server</string>
    <string name="summery_server">Configure server</string>
    <string name="sync_server">Sync to server</string>
    <string name="default_company_name">Company Name</string>
    <string name="key_company_name">key_company_name</string>
    <string name="title_company_name">Company Name</string>
    <string name="key_company_code">key_company_code</string>
    <string name="default_company_code">Company Code</string>
    <string name="key_location">key_location</string>
    <string name="title_location">Location Code</string>
    <string name="key_branch_code">key_branch_code</string>
    <string name="title_branch">Branch Code</string>
    <string name="key_period">key_period</string>
    <string name="title_period">Period Code</string>
    <string name="title_company_code">Company Code</string>
    <string name="key_employee">key_employee</string>
    <string name="title_employee">Employee Id</string>
    <string name="default_header">Header</string>
    <string name="default_logo">Click to Add logo</string>
    <string name="default_id_summary">Set Auto Increment Id</string>
    <string name="action_logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="action_export">Export</string>
    <string name="click_to_start">Click to start</string>
    <string name="nav_report">Reports</string>
    <string name="default_header_arabic">Header(Arabic)</string>
    <string name="title_logo">logo</string>
    <string name="key_logo">key_logo</string>
    <string name="key_Auto_Id">key_Auto_Id</string>
    <string name="default_branch_code">Branch Code</string>
    <string name="default_location">Location Code</string>
    <string name="default_employee_code">Employee Code</string>
    <string name="default_period_code">Period Code</string>
    <string name="default_backup">Backup</string>
    <string name="title_backup">Backup Data</string>
    <string name="key_backup">key_backup</string>
    <string name="nav_order">Order</string>
    <string name="action_add">Add</string>
    <string name="sync">Sync</string>
    <string name="key_sync_type">key_sync_type</string>
    <string name="title_sync">Sync Type</string>
    <string name="default_sync_value">live_sync</string>
    <string name="title_Id">Auto Id</string>
    <string name="nav_statement">Statement</string>


    <!--Spinner -->
    <string-array name="paper_size">
        <item>38mm</item>
        <item>43mm</item>
    </string-array>
</resources>



