<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="General">

        <PreferenceScreen
            android:title="@string/server_settings"
            android:summary="@string/summery_server">

            <EditTextPreference
                android:defaultValue="@string/default_server_url"
                android:key="@string/key_server_url"
                android:summary="@string/default_server_url"
                android:title="@string/title_server" />

            <EditTextPreference
                android:defaultValue="@string/default_company_name"
                android:key="@string/key_company_name"
                android:title="@string/title_company_name" />

            <EditTextPreference
                android:defaultValue="@string/default_company_code"
                android:key="@string/key_company_code"
                android:title="@string/title_company_code" />

            <EditTextPreference
                android:defaultValue="@string/default_branch_code"
                android:key="@string/key_branch_code"
                android:title="@string/title_branch" />

            <EditTextPreference
                android:defaultValue="@string/default_location"
                android:key="@string/key_location"
                android:title="@string/title_location" />

            <EditTextPreference
                android:defaultValue="@string/default_period_code"
                android:key="@string/key_period"
                android:title="@string/title_period" />
            <EditTextPreference
                android:defaultValue="@string/default_employee_code"
                android:key="@string/key_employee"
                android:title="@string/title_employee" />


        </PreferenceScreen>



    </PreferenceCategory>

    <PreferenceCategory android:title="Modules">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/key_module_inventory"
            android:title="@string/title_module_inventory" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/key_module_goods"
            android:title="@string/title_module_goods" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/key_module_sales"
            android:title="@string/title_module_sales" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/key_module_receipts"
            android:title="@string/title_module_receipts" />

    </PreferenceCategory>
    <PreferenceCategory android:title="Print">


        <Preference
            android:summary="@string/summery_printer_settings"
            android:title="@string/title_printer_settings"
            android:key="@string/key_printer"
            />

        <EditTextPreference
            android:title="@string/title_header_1"
            android:key="@string/key_header_1"
            android:defaultValue="@string/default_header_arabic"
            android:summary="@string/summery_header_1"/>
        <EditTextPreference
            android:title="@string/title_header_2"
            android:key="@string/key_header_2"
            android:defaultValue="@string/default_header"
            android:summary="@string/summery_header_2"/>
        <EditTextPreference
            android:title="@string/title_header_3"
            android:key="@string/key_header_3"
            android:defaultValue="@string/default_header"
            android:summary="@string/summery_header_3"/>


        <Preference
            android:summary="@string/default_logo"
            android:title="@string/title_logo"
            android:key="@string/key_logo"
            />
        <EditTextPreference
            android:title="@string/title_footer"
            android:key="@string/key_footer"
            android:defaultValue="@string/default_footer"
            android:summary="@string/summery_footer"/>

        <Preference
            android:summary="@string/default_backup"
            android:title="@string/title_backup"
            android:key="@string/key_backup"
            />

    </PreferenceCategory>

</PreferenceScreen>