<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_check"
            android:icon="@drawable/ic_chk"
            android:title="@string/nav_check" />

        <item
            android:id="@+id/nav_sale"
            android:icon="@drawable/ic_sale"
            android:title="@string/nav_sale" />

        <item
            android:id="@+id/nav_inventory"
            android:icon="@drawable/ic_inventory"
            android:title="@string/nav_inventory" />
        <item
            android:id="@+id/nav_goods_receive"
            android:icon="@drawable/ic_receive"
            android:title="@string/nav_receive" />

        <item
            android:id="@+id/nav_receipt"
            android:icon="@drawable/ic_receipt_24dp"
            android:title="@string/nav_receipt" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/nav_logout" />

    </group>


    <item
        android:id="@+id/nav_admin"
        android:title="@string/nav_admin">
        <menu>


            <!--<item-->
                <!--android:id="@+id/nav_settings"-->
                <!--android:icon="@drawable/ic_settings"-->
                <!--android:title="@string/nav_settings" />-->

            <item
                android:id="@+id/nav_setup"
                android:icon="@drawable/ic_settings"
                android:title="@string/nav_setup" />
            <item
                android:id="@+id/nav_print"
                android:icon="@drawable/ic_printer"
                android:title="Printer"/>

            <!--<item-->
                <!--android:id="@+id/nav_clear"-->
                <!--android:icon="@drawable/ic_clear_black_24dp"-->
                <!--android:title="Clear Data"/>-->

            <!--<item-->
                <!--android:id="@+id/nav_change_password"-->
                <!--android:icon="@drawable/ic_password"-->
                <!--android:title="@string/nav_password"/>-->

        </menu>


    </item>





</menu>