<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">




    <item
        android:id="@+id/action_print"
        android:icon="@drawable/ic_print_white"
        android:title="@string/action_print"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_white"
        android:title="@string/action_share"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_sync"
        android:icon="@drawable/ic_sync_white"
        android:title="@string/action_sync"
        app:showAsAction="always" />


    <item
        android:id="@+id/action_clear"
        android:icon="@drawable/ic_close_white"
        android:title="@string/action_clear" />




</menu>