<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.DashBoardActivity"
    android:orientation="vertical">
    <include
        layout="@layout/toolbar_layout">
    </include>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@color/background"
        android:gravity="center"
        android:id="@+id/layBase">

        <LinearLayout
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.CardView
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:id="@+id/saleCard"
                android:layout_width="@dimen/card_width_mob"
                android:layout_height="@dimen/card_height_mob"
                android:layout_margin="@dimen/medium_margin">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="@dimen/image_size_mob"
                        android:layout_height="@dimen/image_size_mob"
                        android:background="@drawable/cerclebackgroundpurple"
                        android:src="@drawable/ic_sale"
                        android:padding="@dimen/medium_margin"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginTop="@dimen/medium_margin"
                        android:text="@string/nav_sale"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/lightgray"
                        android:layout_margin="@dimen/medium_margin"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/click_to_start"
                        android:padding="@dimen/small_padding"
                        android:textColor="@android:color/darker_gray"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:id="@+id/receiptCard"
                android:layout_width="@dimen/card_width_mob"
                android:layout_height="@dimen/card_height_mob"
                android:layout_margin="@dimen/medium_margin">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="@dimen/image_size_mob"
                        android:layout_height="@dimen/image_size_mob"
                        android:background="@drawable/cerclebackgroundpink"
                        android:src="@drawable/ic_attach_money_black_24dp"
                        android:padding="@dimen/medium_margin"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginTop="@dimen/medium_margin"
                        android:text="@string/nav_receipt"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/lightgray"
                        android:layout_margin="@dimen/medium_margin"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/click_to_start"
                        android:padding="@dimen/small_padding"
                        android:textColor="@android:color/darker_gray"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>


        <LinearLayout
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.CardView
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:id="@+id/inventoryCard"
                android:layout_width="@dimen/card_width_mob"
                android:layout_height="@dimen/card_height_mob"
                android:layout_margin="@dimen/medium_margin">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="@dimen/image_size_mob"
                        android:layout_height="@dimen/image_size_mob"
                        android:background="@drawable/cerclebackgroundgreen"
                        android:src="@drawable/ic_inventory"
                        android:padding="@dimen/medium_margin"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginTop="@dimen/medium_margin"
                        android:text="@string/nav_inventory"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/lightgray"
                        android:layout_margin="@dimen/medium_margin"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/click_to_start"
                        android:padding="@dimen/small_padding"
                        android:textColor="@android:color/darker_gray"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:id="@+id/goodsCard"
                android:layout_width="@dimen/card_width_mob"
                android:layout_height="@dimen/card_height_mob"
                android:layout_margin="@dimen/medium_margin">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="@dimen/image_size_mob"
                        android:layout_height="@dimen/image_size_mob"
                        android:background="@drawable/cerclebackgroundyello"
                        android:padding="@dimen/medium_margin"
                        android:src="@drawable/ic_receive" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/nav_receive"
                        android:textStyle="bold" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="10dp"
                        android:background="@color/lightgray" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="@dimen/small_padding"
                        android:text="@string/click_to_start"
                        android:textColor="@android:color/darker_gray" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>


        <LinearLayout
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.CardView
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:id="@+id/checkCard"
                android:layout_width="@dimen/card_width_mob"
                android:layout_height="@dimen/card_height_mob"
                android:layout_margin="@dimen/medium_margin">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="@dimen/image_size_mob"
                        android:layout_height="@dimen/image_size_mob"
                        android:background="@drawable/cerclebackgroundpurple"
                        android:src="@drawable/ic_search_black_24dp"
                        android:padding="@dimen/medium_padding"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginTop="@dimen/medium_margin"
                        android:text="@string/nav_check"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/lightgray"
                        android:layout_margin="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/click_to_start"
                        android:padding="@dimen/small_padding"
                        android:textColor="@android:color/darker_gray"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:id="@+id/reportCard"
                android:layout_width="@dimen/card_width_mob"
                android:layout_height="@dimen/card_height_mob"
                android:layout_margin="@dimen/medium_margin">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="@dimen/image_size_mob"
                        android:layout_height="@dimen/image_size_mob"
                        android:background="@drawable/cerclebackgroundgreen"
                        android:src="@drawable/ic_inventory"
                        android:padding="@dimen/medium_padding"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginTop="@dimen/medium_margin"
                        android:text="@string/nav_report"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/lightgray"
                        android:layout_margin="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/click_to_start"
                        android:padding="@dimen/small_padding"
                        android:textColor="@android:color/darker_gray"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

    </LinearLayout>




</LinearLayout>